[package]
name = "quantum_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gate_benchmarks"
harness = false

[features]
default = ["f64"]
f64 = []
f32 = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
